# MenuMind

./: .env.example  .gitignore  LICENSE  Makefile  PROJECT_INSTRUCTIONS.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/common/exceptions/: handlers.py
backend/app/common/middleware/: rate_limit.py  tenant.py  token_budget.py
backend/app/common/pagination/: schema.py
backend/app/common/responses/: schemas.py
backend/app/common/utils/: slug.py
backend/app/common/validators/: file.py
backend/app/core/: config.py  constants.py  database.py  dependencies.py  redis.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/modules/admin/: model.py  router.py
backend/app/modules/auth/: dependencies.py  model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/chats/: model.py  repository.py  router.py  schema.py
backend/app/modules/knowledge_base/: model.py  repository.py  router.py  schema.py
backend/app/modules/menus/: model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/owner/: router.py
backend/app/modules/qr/: model.py  router.py
backend/app/modules/tenants/: model.py  repository.py  schema.py
backend/app/modules/users/: model.py  repository.py  router.py  schema.py
backend/app/tasks/: ai_tasks.py  celery_app.py  reports.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_chat_api.py
backend/app/tests/unit/: test_auth.py  (+2 more)
(+38 files in other folders)
