[project]
name = "menumind-backend"
version = "1.0.0"
description = "MenuMind backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "redis==5.0.7",
    "celery==5.4.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "httpx-ws==0.6.0",
    "openai==1.30.1",
    "pinecone-client==3.2.0",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-pinecone",
    "boto3==1.34.106",
    "Pillow==10.3.0",
    "qrcode[pil]==7.4.2",
    "python-dotenv==1.0.1",
    "sse-starlette==2.0.0",
    "tenacity==8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
    "ruff==0.4.4",
    "aiosqlite==0.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
